envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 8001
static_resources:
  clusters:
  - name: ratelimit
    type: STRICT_DNS
    connect_timeout: 1s
    lb_policy: ROUND_ROBIN
    protocol_selection: USE_CONFIGURED_PROTOCOL
    http2_protocol_options: {}
    load_assignment:
      cluster_name: ratelimit
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8081
  - name: api-openai
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          alpn_protocols: ["h2", "http/1.1"]  # Ensure ALPN protocols are specified
        sni: api.openai.com  # Correct placement of SNI
    dns_lookup_family: V4_ONLY
    http2_protocol_options: {}
    load_assignment:
      cluster_name: api-openai
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: api.openai.com
                port_value: 443
  listeners:
    - address:
        socket_address:
          address: 127.0.0.1
          port_value: 15000
      filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            codec_type: AUTO
            stat_prefix: egress
            # use_remote_address: true
            # skip_xff_append: false
            http_filters:
            - name: envoy.filters.http.ratelimit
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                domain: rl
                request_type: external
                stage: 0
                rate_limited_as_resource_exhausted: false # Do not treat as exhausted
                failure_mode_deny: false
                enable_x_ratelimit_headers: DRAFT_VERSION_03
                rate_limit_service:
                  grpc_service:
                    envoy_grpc:
                      cluster_name: ratelimit
                  transport_api_version: V3
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            route_config:
              name: route
              virtual_hosts:
              - name: backend
                domains:
                  - "*"
                routes:
                - match:
                    prefix: "/"
                  route:
                    cluster: api-openai
                    timeout: 60s # Route timeout should be greater than buffer max_request_time
                    rate_limits:
                      - actions:
                        - request_headers:
                            header_name: ":authority"
                            descriptor_key: "host"
                    retry_policy:
                      retry_on: "5xx,retriable-status-codes"  # Retry on 429 and server errors
                      num_retries: 5
                      per_try_timeout: "10s"
                      retriable_status_codes:  # here
                        - 429
                        - 401
                      retry_back_off:
                        base_interval: "5s"  # Initial retry delay
                        max_interval: "10s"  # Maximum retry delay
